<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Actionbar Experiment</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World</string>
    <string name="ui_tabname_breakfast">Breakfast</string>
    <string name="ui_tabname_lunch">Lunch</string>
    <string name="ui_tabname_dinner">Dinner</string>
    <string name="ui_tabname_snack">Snack</string>

    <string name="ui_menu_search">Search</string>
    <string name="ui_menu_send">Send</string>
    <string name="ui_menu_share">Share</string>
    <string name="ui_menu_about">About</string>
    <string name="ui_menu_feedback">Feedback</string>
    <string name="ui_menu_quit">Quit</string>
</resources>
